# langchain-diffbot

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.cursor/plans/: use_diffbot-python_sdk_516d30b2.plan.md
examples/: .env.example  README.md  _build_notebook.py  quickstart.ipynb
examples/company_research/: __init__.py  __main__.py  agent.py  cli.py  tools.py
langchain_diffbot/: __init__.py  _client.py  chat_models.py  document_loaders.py  retrievers.py  tools.py
tests/integration_tests/: test_retriever.py  test_standard.py
tests/unit_tests/: test_chat_models.py  test_document_loaders.py  test_imports.py  test_retriever.py  test_tools.py  test_web_search_retriever.py
