[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-diffbot"
version = "0.1.0"
description = "LangChain integration for the Diffbot Knowledge Graph and Extract APIs"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Diffbot" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "diffbot-python",
]

[project.optional-dependencies]
examples = [
    "langchain>=1.3,<2.0",
    "langchain-anthropic>=1.4,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.urls]
Homepage = "https://www.diffbot.com/"
Repository = "https://github.com/shixish/langchain-diffbot"
Issues = "https://github.com/shixish/langchain-diffbot/issues"

[dependency-groups]
test = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-mock>=3.10,<4.0",
    "respx>=0.21,<1.0",
    "langchain-tests>=1.0,<2.0",
]
lint = ["ruff>=0.6,<1.0"]
typing = ["mypy>=1.10,<2.0"]

[tool.uv.sources]
langchain-core = { path = "../langchain/libs/core", editable = true }
langchain-tests = { path = "../langchain/libs/standard-tests", editable = true }
diffbot-python = { git = "https://github.com/diffbot/diffbot-python", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["langchain_diffbot"]

[tool.hatch.build.targets.sdist]
include = ["/langchain_diffbot", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# diffbot-python doesn't ship a `py.typed` marker yet. Follow-up: upstream the marker.
module = "diffbot.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "D", "ASYNC", "SIM", "RET", "RUF",
]
ignore = ["D203", "D213", "COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D", "S101"]
# Examples are demos, not library code: looser docstring rules. Notebook
# cell sources also routinely run over 88 chars (URLs, prose). The notebook
# builder script holds notebook cell sources as long inline strings.
"examples/**/*.py" = ["D", "E501"]
"examples/**/*.ipynb" = ["D", "E501", "I001"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "compile: placeholder marker for compile-only integration test runs",
]
